implementado otros metodos, e implementado el swagger y las excepciones