@@ -1,6 +1,7 @@
 package com.example.demo.services.impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -8,6 +9,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.example.demo.config.InmuebleDTOConverter;
 import com.example.demo.dto.InmuebleDTO;
+import com.example.demo.dto.InmuebleDTOlistar;
 import com.example.demo.repositories.RepositoryInmueble;
 import com.example.demo.repositories.entitites.Inmueble;
 import com.example.demo.services.ServiceInmueble;
@@ -16,8 +18,8 @@ import lombok.AllArgsConstructor;
 
 @Service
 @AllArgsConstructor
-public class ServiceInmuebleImpl implements ServiceInmueble{
-    
+public class ServiceInmuebleImpl implements ServiceInmueble {
+
     @Autowired
     private RepositoryInmueble repositoryInmueble;
 
@@ -26,7 +28,7 @@ public class ServiceInmuebleImpl implements ServiceInmueble{
 
     @Override
     @Transactional(readOnly = true)
-    public List<InmuebleDTO> findAll() {
+    public List<InmuebleDTOlistar> findAll() {
         List<Inmueble> inmuebles = (List<Inmueble>) repositoryInmueble.findAll();
         return inmuebles.stream()
                 .map(inmueble -> convert.convertToDTO(inmueble))
@@ -34,11 +36,18 @@ public class ServiceInmuebleImpl implements ServiceInmueble{
     }
 
     @Override
-    public List<InmuebleDTO> findByNumeroReferencia(String numero) {
-        List<Inmueble> inmuebles = repositoryInmueble.findByNumeroReferencia(numero);
+    public List<InmuebleDTOlistar> findByNumeroReferencia(String numeroReferencia) {
+        List<Inmueble> inmuebles = repositoryInmueble.findByNumeroReferencia(numeroReferencia);
         return inmuebles.stream()
                 .map(inmueble -> convert.convertToDTO(inmueble))
-                .toList();
+                .collect(Collectors.toList());
     }
-    
+
+    @Override
+    public InmuebleDTO save(InmuebleDTO inmuebleDTO) {
+        Inmueble inmueble = convert.convertToEntityCreate(inmuebleDTO);
+        inmueble = repositoryInmueble.save(inmueble);
+        return convert.convertToDTOCreate(inmueble);
+    }
+
 }
